# Cubico

./: CMakeLists.txt  Cubico.kdev4  Readme.md
.kdev4/: Cubico.kdev4
src/: Cubico.cpp  Cubico.h  main.cpp  test_camera.cpp  test_vertex_array.cpp
